Social share added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
       gtag('config', 'G-PNLRDJM7G2');
       </script>
+
+<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=61f025ba6346030019493c0a&product=sop' async='async'></script>
    </head>
 
    <body>
