Social share added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <meta property="og:title" content="Somnath Zalte Curriculum Vitae" />
       <meta property="og:description" content="Somnath Zalte is FullStack Developer having excellent coding skill and have capability to provide precise software solutions for your business. Please visit to know more" />
-      <meta property="og:url" content="https://somnathzalte.github.io/" />
+      <meta property="og:url" content="https://somnathpzalte.github.io/" />
       <meta property="og:image" content="images/somnath-zalte.jpg" />
       <meta property="og:site_name" content="Somnath Zalte Curriculum Vitae" />
       <meta property="og:type" content="Personal website" />
