--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <meta property="og:title" content="Somnath Zalte Curriculum Vitae" />
       <meta property="og:description" content="Somnath Zalte is FullStack Developer having excellent coding skill and have capability to provide precise software solutions for your business. Please visit to know more" />
       <meta property="og:url" content="https://somnathpzalte.github.io/" />
-      <meta property="og:image" content="images/somnath-zalte.jpg" />
+      <meta property="og:image" content="https://somnathpzalte.github.io/images/somnath-zalte.jpg" />
       <meta property="og:site_name" content="Somnath Zalte Curriculum Vitae" />
       <meta property="og:type" content="Personal website" />
       <meta http-equiv="content-type" content="text/html;charset=utf-8" />
