--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@
                         <div class="about-desc">
                            <h1><span style="color: #FACD69">Somnath Zalte</span>
                            </h1>
-                           <p class="finalText">Hi, Welcome to my portfolio.<br>I’m a
-                              fullstack developer specialized in
-                              Nodejs, Vuejs, Angular, PHP, AWS Cloud, etc.
+                           <p class="finalText">I'm Lead Engineer with over 10 years of hands-on experience, I specialize in designing, developing, testing, and maintaining scalable web applications across diverse domains such as eCommerce, Publication, ESG, Travel & Logistics. My expertise spans the MERN stack, with a deep focus on Node.js, React.js, AWS, and modern frameworks like Express, NestJS, and Next.js.
                            </p>
                         </div>
                      </div>
@@ -141,10 +139,10 @@
                          data-animate-effect="fadeInRight">
                         <li>
                            <div class="link">
-                              <p style="margin-bottom: 0px">Websites</p>
+                              <p style="margin-bottom: 0px">Web Apps</p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
-                           <ul id="websites" class="submenu">
+                           <ul id="websites" class="submenu" style="display: block;">
                            </ul>
                         </li>
                         <li>
@@ -156,7 +154,7 @@
                            <ul id="android-projects" class="submenu">
                            </ul>
                         </li>
-                        <li>
+                        <li style="display: none;">
                            <div class="link">
                               <p style="margin-bottom: 0px">Freelance Projects
                               </p>
@@ -182,6 +180,28 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="timeline-centered">
+                               <article class="timeline-entry animate-box"
+                                  data-animate-effect="fadeInLeft">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-1">
+                                       <i class="fa fa-code"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2><a href="#">LTIMindtree</a>
+                                          <span>May 2022 - Present</span>
+                                       </h2>
+                                       <p class="finalText">
+                                          <strong>Lead Engineer - Specialist Product Engineering</strong>
+                                       </p>
+                                       <ul class="ul-bullets">
+                                          <li>Designed and developed innovative applications in the ESG and e-commerce domains, enhancing 
+sustainability reporting and compliance solutions.</li>
+                                          <li>Designed and implemented scalable applications using the MERN stack (MongoDB, Express.js, React, 
+Node.js), with Nest and NextJs frameworks for optimizing performance and reducing load times.</li>
+                                       </ul>
+                                    </div>
+                                 </div>
+                              </article>
                               <article class="timeline-entry animate-box"
                                   data-animate-effect="fadeInLeft">
                                  <div class="timeline-entry-inner">
@@ -190,15 +210,17 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="#">NEC Software Solutions</a>
-                                          <span>Jul 2020 - Present</span>
+                                          <span>Jul 2020 - Apr 2022</span>
                                        </h2>
                                        <p class="finalText">
                                           <strong>Senior Software Engineer</strong>
                                        </p>
-                                       <ul>
-                                          <li>- Design and devlope web application.</li>
-                                          <li>- Write Unit test and maintain documentation for the new feature.</li>
-                                          <li>- Application support with cloudwatch, ELK, etc.</li>
+                                       <ul class="ul-bullets">
+                                          <li>Collaborated with multiple teams to deliver high-quality software solutions for a UK client, ensuring timely 
+project delivery and adherence to client specifications.</li>
+                                          <li>Actively contributed to code reviews, fostering best practices and maintaining high coding standards across 
+the team. </li>
+                                          <li>Application support with cloudwatch, ELK, etc.</li>
                                        </ul>
                                     </div>
                                  </div>
@@ -216,8 +238,14 @@
                                        <p class="finalText">
                                           <strong>Senior PHP Developer</strong>
                                        </p>
-                                       <ul>
-                                          <li>- Design and devlope web application.</li>
+                                       <ul class="ul-bullets">
+                                          <li>Led the development of a comprehensive DHL shipping project, starting from concept to implementation, resulting in 
+                                          a streamlined logistics solution that improved shipping efficiency. 
+                                          </li>
+                                          <li>
+                                             Engaged with stakeholders regularly to present progress updates and gather feedback to ensuring that the project met 
+business goals. 
+                                          </li>
                                        </ul>
                                     </div>
                                  </div>
@@ -235,11 +263,12 @@
                                        <p class="finalText">
                                           <strong>Fullstack Developer</strong>
                                        </p>
-                                       <ul>
-                                          <li>- Requirement gathering and understanding.</li>
-                                          <li>- Design and devlope web and mobile applications.</li>
-                                          <li>- Manage CI/CD pipeline with AWS cloud.</li>
-                                          <li>- Manage team of 6 members.</li>
+                                       <ul class="ul-bullets">
+                                          <li>Developed and maintained web and mobile applications using a diverse set of technologies, including PHP, 
+JavaScript, and Android, delivering innovative solutions that met client needs. </li>
+                                          <li>Collaborated closely with clients to gather requirements and provide technical insights.</li>
+                                          <li>Worked on various projects, including eCommerce platforms, publication management systems, and travel & logistics
+                                          applications, showcasing versatility and adaptability in different domains.</li>
                                        </ul>
                                     </div>
                                  </div>
@@ -275,14 +304,12 @@
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2>Master in Computer Application</h2>
-                                       <p><strong>2012-2015</strong></p>
+                                       <h2>Master in Computer Application <h5 style="float: right;">2012-2015</h5></h2>
                                        <strong>
                                           MET's Institute of Engineering Bhujbal Knoweledge City, Nashik
                                        </strong>
-                                       <ul>
-                                          <li>- Full time 3 years course</li>
-                                          <li>- 6 month industrial training</li>
+                                       <ul class="ul-bullets" style="display: none;">
+                                          <li>Full time 3 years course</li>
                                        </ul>
                                     </div>
                                  </div>
