--- a/index.html
+++ b/index.html
@@ -82,20 +82,32 @@
                    style="padding-top: 2em">
                   <div id="navbar" class="collapse">
                      <ul>
-                        <li><a href="#" data-nav-section="about">About</a></li>
-                        <li><a href="#" data-nav-section="skills">Skills</a>
+                        <li>
+                           <a href="#" data-nav-section="about">About</a>
                         </li>
-                        <li><a href="#" data-nav-section="projects">Projects</a>
+                        <li>
+                           <a href="#" data-nav-section="skills">Skills</a>
                         </li>
-                        <li><a href="#" data-nav-section="experience">Work
-                              Experience</a></li>
-                        <li><a href="#"
-                               data-nav-section="education">Education</a></li>
-                        <li><a href="#" data-nav-section="contact">Contact</a>
+                        <li>
+                           <a href="#" data-nav-section="projects">Projects</a>
+                        </li>
+                        <li>
+                           <a href="#" data-nav-section="experience">Work Experience</a>
+                        </li>
+                        <li>
+                           <a href="#" data-nav-section="education">Education</a>
+                        </li>
+                        <li>
+                           <a href="#" data-nav-section="contact">Contact</a>
                         </li>
                      </ul>
                   </div>
                </nav>
+               <ul class="ul-cv">
+               <li>
+                  <a href="./images/Somnath-Zalte-cv.pdf" target="_blank" class="blink_me">Download CV</a>
+               </li>
+            </ul>
             </aside>
             <!----- main page--------->
             <div id="colorlib-main">
